do not use Item_ref for view fields if it is UPDATE of INSERT (BUG#5263)

mysql-test/r/view.result:
  INSERT into VIEW with ON DUPLICATE
mysql-test/t/view.test:
  INSERT into VIEW with ON DUPLICATE
sql/sql_insert.cc:
  do not use Item_ref for view fields if it is UPDATE of INSERT